--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   flutter_map: ^6.1.0
   toastification: ^1.1.0
   geolocator: ^8.0.5
-  # permission_handler: ^11.1.0
+  # insta_assets_picker: ^2.2.1
+  shared_preferences: ^2.2.2
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
