--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.cloudbelly_app"
+    // compileSdkVersion 31
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
