--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
-flutter.sdk=/Users/aniketkumarsingh/flutter
+sdk.dir=C:\\Users\\rk621\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\rk621\\Documents\\Development\\sdks\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
