--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   geocoding: ^2.1.1
   flutter_carousel_widget: ^2.2.0
   infinite_carousel: ^1.0.3
+  url_launcher: ^6.2.4
+  percent_indicator: ^4.2.3
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
