--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   infinite_carousel: ^1.0.3
   url_launcher: ^6.2.4
   percent_indicator: ^4.2.3
+  intl: ^0.19.0
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
