--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   url_launcher: ^6.2.4
   percent_indicator: ^4.2.3
   intl: ^0.19.0
+  flutter_image_compress: ^2.1.0
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
