--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   percent_indicator: ^4.2.3
   intl: ^0.19.0
   flutter_image_compress: ^2.1.0
+  animated_bottom_navigation_bar: ^1.3.3
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
