--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,9 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>NSPhotoLibraryUsageDescription</key>
-<string>Your explanation why you need this permission</string>
-
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your explanation why you need this permission</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need camera access for taking pictures</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need photo library access for choosing pictures</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location is needed for</string>
 	<key>NSLocationAlwaysUsageDescription</key>
@@ -12,7 +15,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Codebelly App</string>
+	<string>Cloudbelly App</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
