--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: ^0.19.0
   flutter_image_compress: ^2.1.0
   animated_bottom_navigation_bar: ^1.3.3
+  provider: ^6.1.1
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
