--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_image_compress: ^2.1.0
   animated_bottom_navigation_bar: ^1.3.3
   provider: ^6.1.1
+  firebase_dynamic_links: ^5.4.13
+  share_plus: ^7.2.2
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
@@ -80,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
     - assets/icons/Registration.svg
   #   - images/a_dot_ham.jpeg
 
