--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   webview_flutter: ^4.7.0
   jwt_decoder: ^2.0.1
   dart_jsonwebtoken: ^2.13.0
+  loading_indicator: ^3.1.1
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
