--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\rk621\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\rk621\\Documents\\Development\\sdks\\flutter
+sdk.dir=C:\\Users\\gsara\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\flutter\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
