--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geocoding: ^2.1.1
   flutter_carousel_widget: ^2.2.0
   infinite_carousel: ^1.0.3
+  google_maps_flutter: ^2.5.3
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
