--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,24 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>1016600015524-1u0hou3m1b5dnv624i7ailkuef2d8psq.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1016600015524-1u0hou3m1b5dnv624i7ailkuef2d8psq</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>1016600015524-k69t8jsvmiunopfs1cp5lp0ieqdd77r4.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA58nxI-QVN6ru7nqp7nj0tFyhdquxi4xU</string>
+	<string>AIzaSyCmlkgjjpkOelQ-DKAbQvinIZ9B5i7lsT0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1016600015524</string>
+	<string>508708683425</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.CloudbellyApp</string>
 	<key>PROJECT_ID</key>
-	<string>cloudbelly-5b13e</string>
+	<string>cloudbelly-d97a9</string>
 	<key>STORAGE_BUCKET</key>
-	<string>cloudbelly-5b13e.appspot.com</string>
+	<string>cloudbelly-d97a9.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1016600015524:ios:05a19bd4c080bd65d8ac31</string>
+	<string>1:508708683425:ios:6c04a6fd1f1e31eee9bae0</string>
 </dict>
 </plist>
