--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  lottie: ^1.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -91,6 +91,8 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/Animation - 1710085539831.json
+
     # - assets/icons/Registration.svg
   #   - images/a_dot_ham.jpeg
 
