--- a/android/local.properties
+++ b/android/local.properties
@@ -1,6 +1,6 @@
-sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
-flutter.sdk=/Users/aniketkumarsingh/flutter
+sdk.dir=C:\\Users\\rk621\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\rk621\\Documents\\Development\\sdks\\flutter
 =======
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.4
 flutter.versionCode=1
