--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   responsive_sizer: ^3.2.0
   image_picker: ^1.0.5
-  # google_fonts: ^6.1.0
+  google_fonts: ^6.1.0
   flutter_svg: ^2.0.10+1
   figma_squircle: ^0.5.3
   flutter_map: ^6.1.0
