--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ def keystoreProperties = new Properties()
    }
  
 android {
-    namespace "com.example.cloudbelly_app"
+    namespace "com.app.cloudbelly_app"
     // compileSdkVersion 31
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
@@ -49,7 +49,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.cloudbelly_app"
+        applicationId "com.app.cloudbelly_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 20
@@ -69,7 +69,7 @@ android {
    }
    buildTypes {
        release {
-           signingConfig signingConfigs.debug
+           signingConfig signingConfigs.release
        }
    }
 
