--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.CloudbellyApp</string>
+	<string>com.app.CloudbellyApp</string>
 	<key>PROJECT_ID</key>
 	<string>cloudbelly-d97a9</string>
 	<key>STORAGE_BUCKET</key>
