--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.app" "\0"
             VALUE "FileDescription", "cloudbelly_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "cloudbelly_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.app. All rights reserved." "\0"
             VALUE "OriginalFilename", "cloudbelly_app.exe" "\0"
             VALUE "ProductName", "cloudbelly_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
