ui changes in buttomsheet
making background blurred depending on height of sheet, and aligning of menu post items like, title and also changing the border radius of the post items

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\rk621\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\rk621\\Documents\\Development\\sdks\\flutter
+sdk.dir=C:\\Users\\Android\\Sdk
+flutter.sdk=C:\\src\\flutter
 =======
 flutter.buildMode=debug
 flutter.versionName=1.0.5
