--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/dummy_images/
     - assets/icons/
     - assets/images/
     - assets/Animation - 1710085539831.json
