--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=C:\\Users\\Admin\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=2.0.5
