--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  json_annotation: ^4.8.1
   responsive_sizer: ^3.2.0
   image_picker: ^1.0.5
   google_fonts: ^6.1.0
@@ -48,6 +49,7 @@ dependencies:
   # permission_handler: ^11.1.0
   geocoding: ^2.1.1
   flutter_carousel_widget: ^2.2.0
+  permission_handler: ^10.2.0
   infinite_carousel: ^1.0.3
   google_maps_flutter: ^2.5.3
   url_launcher: ^6.2.4
@@ -67,6 +69,8 @@ dependencies:
   fine_bar_chart: ^0.0.3
   flutter_svg_image: ^1.0.0
   firebase_core: ^2.27.2
+  firebase_messaging: ^14.8.1
+  flutter_local_notifications: ^17.0.0
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
@@ -79,6 +83,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
