--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,5 @@
 sdk.dir=C:\\Users\\Admin\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
 flutter.buildMode=debug
-flutter.versionName=2.0.5
+flutter.versionName=4.0.2
+flutter.versionCode=11
