--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
         applicationId "com.app.cloudbelly_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 20
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -69,8 +69,7 @@ android {
    }
    buildTypes {
        release {
-        // change this to release when building appp bundle
-           signingConfig signingConfigs.debug
+           signingConfig signingConfigs.release
        }
    }
 
