--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.5
+version: 4.0.2+11
 
 environment:
   sdk: ">=3.1.0-163.1.beta <4.0.0"
@@ -45,7 +45,7 @@ dependencies:
   geolocator: ^10.1.0
   pull_to_refresh: ^2.0.0
   # insta_assets_picker: ^2.2.1
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.2.3
   # permission_handler: ^11.1.0
   geocoding: ^2.1.1
   flutter_carousel_widget: ^2.2.0
@@ -58,6 +58,7 @@ dependencies:
   flutter_image_compress: ^2.1.0
   animated_bottom_navigation_bar: ^1.3.3
   provider: ^6.1.1
+  uni_links: ^0.5.1
   firebase_dynamic_links: ^5.4.13
   share_plus: ^7.2.2
   jose: ^0.3.4
@@ -71,6 +72,9 @@ dependencies:
   firebase_core: ^2.27.2
   firebase_messaging: ^14.8.1
   flutter_local_notifications: ^17.0.0
+  razorpay_flutter: ^1.3.6
+  google_sign_in: ^6.2.1
+  qr_flutter: ^4.1.0
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
