--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\Android\\Sdk
 flutter.sdk=C:\\src\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=4.0.2
 flutter.versionCode=11
