--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\Admin\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\renis\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=4.0.4
