--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\renis\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\gsara\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\flutter\\flutter
 flutter.buildMode=debug
 flutter.versionName=4.0.4
 flutter.versionCode=13
