--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,11 @@ android {
     // compileSdkVersion 31
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
-
+    allprojects {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:deprecation"
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -59,17 +63,20 @@ android {
         multiDexEnabled true
     }
 
-    signingConfigs {
-       release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
-       }
-   }
+//    signingConfigs {
+//       release {
+//           keyAlias keystoreProperties['keyAlias']
+//           keyPassword keystoreProperties['keyPassword']
+//           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+//           storePassword keystoreProperties['storePassword']
+////           signingConfig null
+////           minifyEnabled false
+////           useProguard false
+//       }
+//   }
    buildTypes {
        release {
-           signingConfig signingConfigs.release
+           signingConfig signingConfigs.debug
        }
    }
 
