--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Android\\Sdk
-flutter.sdk=C:\\src\\flutter
-flutter.buildMode=release
+sdk.dir=C:\\Users\\USER\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\developement\\flutter
+flutter.buildMode=debug
 flutter.versionName=4.0.2
 flutter.versionCode=11
