--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\renis\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
+flutter.sdk=/Users/aniketkumarsingh/flutter
 flutter.buildMode=debug
 flutter.versionName=4.0.4
-flutter.versionCode=13
+flutter.versionCode=15
