update deep link

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,22 +35,21 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-<!-- 
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="https"
-                    android:host="app.cloudbelly.in" />
-            </intent-filter> -->
-            <intent-filter android:autoVerify="true">
-    <action android:name="android.intent.action.VIEW"/>
-    <category android:name="android.intent.category.DEFAULT"/>
-    <category android:name="android.intent.category.BROWSABLE"/>
-    <data android:scheme="https"
-          android:host="app.cloudbelly.in"
-          android:pathPrefix="/"/>
-</intent-filter>
+
+            <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+
+        <!-- Adjust these to match your dynamic link settings -->
+        <data
+            android:host="app.cloudbelly.in"
+            android:scheme="https"
+            android:pathPrefix="/"/>
+    </intent-filter>
+
+
+
 
 
             <!-- <intent-filter android:autoVerify="true"
