--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,30 +36,20 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
-            <intent-filter>
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-
-        <!-- Adjust these to match your dynamic link settings -->
-        <data
-            android:host="app.cloudbelly.in"
-            android:scheme="https"
-            android:pathPrefix="/"/>
-    </intent-filter>
-
-
-
-
-
-            <!-- <intent-filter android:autoVerify="true"
-                tools:targetApi="m">
+            
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="https"
-                    android:host="app.cloudbelly.in" />
-            </intent-filter> -->
+                <data android:scheme="https" android:host="app.cloudbelly.in" android:pathPrefix="/profile"/>
+            </intent-filter>
+           <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="cloudbelly" android:host="profile"/>
+            </intent-filter>
+
         </activity>
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
