--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   razorpay_flutter: ^1.3.6
   google_sign_in: ^6.2.1
   qr_flutter: ^4.1.0
+  location: ^6.0.2
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
