--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
-flutter.sdk=/Users/aniketkumarsingh/flutter
+sdk.dir=C:\\Users\\gsara\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\flutter\\flutter
 flutter.buildMode=debug
 flutter.versionName=4.0.4
 flutter.versionCode=15
