--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,8 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/Animation - 1710085539831.json
+    - assets/images/Phone.png
+    - assets/images/back_double_arrow.png
 
     # - assets/icons/Registration.svg
   #   - images/a_dot_ham.jpeg
