--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,7 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/Animation - 1710085539831.json
+    - assets/Animation - 1718049075869.json
     - assets/images/Phone.png
     - assets/images/back_double_arrow.png
 
