--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   url_launcher: ^6.2.4
   percent_indicator: ^4.2.3
   intl: ^0.19.0
+  screenshot: ^2.0.0
+  path_provider: ^2.0.11
   flutter_image_compress: ^2.1.0
   animated_bottom_navigation_bar: ^1.3.3
   provider: ^6.1.1
@@ -77,6 +79,7 @@ dependencies:
   qr_flutter: ^4.1.0
   location: ^6.0.2
   smooth_corner: ^1.1.0
+  pretty_qr_code: ^3.3.0
   # multiple_images_picker: ^1.0.1
 
 dev_dependencies:
