--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,6 +112,7 @@ flutter:
     - assets/Animation - 1710085539831.json
     - assets/Animation - 1718049075869.json
     - assets/images/Phone.png
+    - assets/images/Heart.png
     - assets/images/back_double_arrow.png
 
     # - assets/icons/Registration.svg
