--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
 flutter.sdk=/Users/aniketkumarsingh/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=4.0.14
 flutter.versionCode=25
