--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ flutter:
     - assets/images/
     - assets/Animation - 1710085539831.json
     - assets/Animation - 1718049075869.json
+    - assets/Animation - welcome.json
     - assets/images/Phone.png
     - assets/images/Heart.png
     - assets/images/back_double_arrow.png
