--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   pretty_qr_code: ^3.3.0
   cached_network_image: ^3.3.1
   flutter_file_dialog: ^3.0.2
+  flutter_otp_text_field: ^1.1.3+2
 
   # multiple_images_picker: ^1.0.1
 
