--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,7 @@ flutter:
     - assets/images/
     - assets/Animation - 1710085539831.json
     - assets/Animation - 1718049075869.json
+    - assets/Animation - thanks.json
     - assets/Animation - welcome.json
     - assets/images/Phone.png
     - assets/images/Heart.png
