--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
 flutter.sdk=/Users/aniketkumarsingh/flutter
-flutter.buildMode=release
-flutter.versionName=4.0.30
-flutter.versionCode=40
+flutter.buildMode=debug
+flutter.versionName=4.0.31
+flutter.versionCode=41
