--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
 flutter.sdk=/Users/aniketkumarsingh/flutter
-flutter.buildMode=release
-flutter.versionName=4.0.37
-flutter.versionCode=47
+flutter.buildMode=debug
+flutter.versionName=4.0.38
+flutter.versionCode=48
