--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,7 @@ flutter:
     - assets/Animation - 1718049075869.json
     - assets/Animation - thanks.json
     - assets/Animation - welcome.json
+    - assets/assigning.json
     - assets/images/Phone.png
     - assets/images/Heart.png
     - assets/images/back_double_arrow.png
