--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_file_dialog: ^3.0.2
   flutter_otp_text_field: ^1.1.3+2
+  flutter_custom_tabs: ^2.1.0
 
   # multiple_images_picker: ^1.0.1
 
