--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
 flutter.sdk=/Users/aniketkumarsingh/flutter
-flutter.buildMode=release
-flutter.versionName=4.0.40
-flutter.versionCode=50
+flutter.buildMode=debug
+flutter.versionName=4.0.41
+flutter.versionCode=51
