--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,10 @@ dependencies:
   flutter_file_dialog: ^3.0.2
   flutter_otp_text_field: ^1.1.3+2
   flutter_custom_tabs: ^2.1.0
+  in_app_update: ^4.2.3
+  package_info_plus: ^8.0.2
+  http: ^1.2.2
+  html: ^0.15.4
 
   # multiple_images_picker: ^1.0.1
 
