--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -122,6 +122,7 @@ flutter:
     - assets/Animation - 1718049075869.json
     - assets/Animation - thanks.json
     - assets/Animation - welcome.json
+    - assets/Animation - panda.json
     - assets/assigning.json
     - assets/images/Phone.png
     - assets/images/Heart.png
