--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
 flutter.sdk=/Users/aniketkumarsingh/flutter
-flutter.buildMode=debug
-flutter.versionName=4.0.45
-flutter.versionCode=55
+flutter.buildMode=release
+flutter.versionName=4.0.46
+flutter.versionCode=56
