--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/aniketkumarsingh/Library/Android/sdk
 flutter.sdk=/Users/aniketkumarsingh/flutter
-flutter.buildMode=release
-flutter.versionName=4.0.46
-flutter.versionCode=56
+flutter.buildMode=debug
+flutter.versionName=4.0.48
+flutter.versionCode=58
